# neural

./: .ghci  .gitignore  .travis.yml  LICENSE  README.markdown  README.md  neural-0.1.0.0-docs.tar  neural-0.1.0.1-docs.tar  neural.cabal  shell.nix  stack.yaml
app/: Main.hs
benchmark/: benchmark.hs
doc/: Data-MyPrelude.html  Data-Utils-Analytic.html  Data-Utils-Arrow.html  Data-Utils-List.html  Data-Utils-Matrix.html  Data-Utils-Random.html  Data-Utils-Stack.html  Data-Utils-Statistics.html  Data-Utils-Traversable.html  Data-Utils-Vector.html  Data-Utils.html  MyPrelude.html  Neural-Component.html  Neural-Descent.html  Neural-Layer.html  Neural-Model.html  Neural-Monad.html  Neural-Normalization.html  Neural-Pipes.html  Neural.html  Numeric-Neural-Layer.html  Numeric-Neural-Model.html  Numeric-Neural-Normalization.html  Numeric-Neural-Pipes.html  Numeric-Neural.html  Utils-Analytic.html  Utils-Arrow.html  Utils-List.html  Utils-Matrix.html  Utils-Random.html  Utils-Stack.html  Utils-Statistics.html  Utils-Traversable.html  Utils-Vector.html  Utils.html  doc-index-126.html  doc-index-33.html  doc-index-38.html  doc-index-46.html  doc-index-60.html  (+66 more)
doc/src/: Data-MyPrelude.html  Data-Utils-Analytic.html  Data-Utils-Arrow.html  Data-Utils-List.html  Data-Utils-Matrix.html  Data-Utils-Random.html  Data-Utils-Stack.html  Data-Utils-Statistics.html  Data-Utils-Traversable.html  Data-Utils-Vector.html  Data-Utils.html  MyPrelude.html  Neural-Component.html  Neural-Descent.html  Neural-Layer.html  Neural-Model.html  Neural-Monad.html  Neural-Normalization.html  Neural-Pipes.html  Neural.html  Numeric-Neural-Layer.html  Numeric-Neural-Model.html  Numeric-Neural-Normalization.html  Numeric-Neural-Pipes.html  Numeric-Neural.html  Utils-Analytic.html  Utils-Arrow.html  Utils-List.html  Utils-Matrix.html  Utils-Random.html  Utils-Stack.html  Utils-Statistics.html  Utils-Traversable.html  Utils-Vector.html  Utils.html
doctest/: doctest.hs
examples/MNIST/: MNIST.hs  MNIST_cnn.hs  README.md
examples/iris/: README.md  iris.hs
examples/sin/: Graph.hs  reinforceSin.hs  sin.hs
examples/sqrt/: sqrt.hs
src/: MyPrelude.hs  Neural.hs  Utils.hs
src/Data/: FixedSize.hs  MyPrelude.hs  Utils.hs
src/Data/FixedSize/: Class.hs  Matrix.hs  Vector.hs  Volume.hs
src/Data/Utils/: Analytic.hs  Arrow.hs  Cache.hs  List.hs  Matrix.hs  Pipes.hs  Random.hs  Stack.hs  Statistics.hs  Traversable.hs  Vector.hs  Volume.hs
src/Neural/: Analytic.hs  Component.hs  Components.hs  Descent.hs  Gradients.hs  Layer.hs  Layout.hs  Layouts.hs  Matrix.hs  Model.hs  Monad.hs  Normalization.hs  Pipes.hs  Sample.hs  Samples.hs  Utils.hs  Vector.hs
src/Neural/Utils/: List.hs  Random.hs  Stack.hs  Statistics.hs  Traversable.hs
src/Numeric/: Neural.hs
src/Numeric/Neural/: Convolution.hs  Genetic.hs  Layer.hs  Model.hs  Normalization.hs  Pipes.hs  Reinforcement.hs
src/Utils/: Analytic.hs  Arrow.hs  List.hs  Matrix.hs  Random.hs  Stack.hs  Statistics.hs  Traversable.hs  Vector.hs
test/Data/FixedSize/: ClassSpec.hs  MatrixSpec.hs  VectorSpec.hs  VolumeSpec.hs
test/Data/Utils/: CacheSpec.hs
test/Neural/: DescentSpec.hs
test/Utils/: CacheSpec.hs  MatrixSpec.hs  VectorSpec.hs
