name:                neural
version:             0.1.0.0
synopsis:            Neural Networks in native Haskell
description:         Please see README.md
homepage:            http://github.com/brunjlar/neural
license:             MIT
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          brunjlar@gmail.com
copyright:           Copyright: (c) 2016 Dr. Lars Bruenjes
category:            Machine Learning
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Neural
                     , Numeric.Neural.Layer
                     , Numeric.Neural.Model
                     , Numeric.Neural.Normalization
                     , Numeric.Neural.Pipes
                     , Data.MyPrelude
                     , Data.Utils
                     , Data.Utils.Analytic
                     , Data.Utils.Arrow
                     , Data.Utils.List
                     , Data.Utils.Matrix
                     , Data.Utils.Random
                     , Data.Utils.Stack
                     , Data.Utils.Statistics
                     , Data.Utils.Traversable
                     , Data.Utils.Vector
  other-modules:
  ghc-options:         -Wall -fexcess-precision -optc-O3 -optc-ffast-math
  build-depends:       base >= 4.7 && < 5
                     , ad
                     , array
                     , deepseq
                     , directory
                     , filepath
                     , ghc-typelits-natnormalise
                     , hspec
                     , lens
                     , MonadRandom
                     , mtl
                     , parallel
                     , pipes
                     , profunctors
                     , STMonadTrans
                     , text
                     , transformers
                     , typelits-witnesses
                     , vector
  default-language:    Haskell2010

test-suite neural-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , MonadRandom
                     , neural
  other-modules:       Utils.MatrixSpec
                     , Utils.VectorSpec
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fexcess-precision -optc-O3 -optc-ffast-math
  default-language:    Haskell2010

test-suite neural-doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      doctest
  main-is:             doctest.hs
  build-depends:       base >= 4.7 && < 5
                     , doctest
                     , neural
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fexcess-precision -optc-O3 -optc-ffast-math

  default-language:    Haskell2010

executable iris
  hs-source-dirs:      examples/iris
  main-is:             iris.hs
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , neural
                     , text
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fexcess-precision -optc-O3 -optc-ffast-math
  default-language:    Haskell2010

executable sqrt
  hs-source-dirs:      examples/sqrt
  main-is:             sqrt.hs
  build-depends:       base >= 4.7 && < 5
                     , MonadRandom
                     , neural
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fexcess-precision -optc-O3 -optc-ffast-math
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/brunjlar/neural.git

